--- a/webapp.yml
+++ b/webapp.yml
@@ -18,16 +18,16 @@
 
     - name: dowloading the application file
       get_url: 
-        url: /home/ec2-user/swdv660/helloworld.js
+        url: https://raw.githubusercontent.com/vfsettle/SWDV660-Week3/master/helloworld.js
         dest: /home/ec2-user/
         owner: ec2-user
         group: ec2-user
-        mode: 0644
+        mode: 0644  
 
-    - name: copying the upstart file
+    - name: download the upstart file
       become: yes
-      copy: 
-        src: /home/ec2-user/swdv660/helloworld.conf
+      get_url: 
+        url: https://raw.githubusercontent.com/vfsettle/SWDV660-Week3/master/helloworld.conf
         dest: /etc/init/helloworld.conf
         owner: root
         group: root
